# polars_gpu_howto

./: README.md  polars_gpu.ipynb  pyproject.toml
