[project]
name = "polars-gpu"
version = "1.0"
description = "How to enable polars gpu for projects with gpu access in compute engine resources"
authors = [
    {name = "patrick.bormann@gmx.de"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "polars (>=1.25.2,<2.0.0)",
    "ipykernel (>=6.29.5)",
    "cudf-polars-cu12 (==25.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false  #for only dependency management and to use poetry install instead of poetry build